--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <h3>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>View the Xenapi Admin Docs wiki at <a href="https://github.com/Xenapi-Admin-Project/xenapi-admin-docs/wiki">https://github.com/Xenapi-Admin-Project/xenapi-admin-docs/wiki</a></p>
       </section>
     </div>
 
